cmake_minimum_required(VERSION 3.10) 
project(CPP) 
set(CMAKE_CXX_STANDARD 17)

include_directories(/ usr / local / include)

# add_executable(CPP 03_01_limits.cpp)
# add_executable(CPP 03_02_exceed.cpp)
# add_executable(CPP 03_03_hexoct.cpp)
# add_executable(CPP 03_04_hexoct2.cpp)
# add_executable(CPP 03_05_chartype.cpp)
# add_executable(CPP 03_06_morechar.cpp)
# add_executable(CPP 03_07_bondini.cpp)
add_executable(CPP 03_08_floatnum.cpp)



